--- a/frontend/package.json
+++ b/frontend/package.json
@@ -103,7 +103,7 @@
     "@types/markerclustererplus": "^2.1.33",
     "acorn": "^6.1.1",
     "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bourbon": "^5.1.0",
     "bourbon-neat": "^3.0.0",
     "chalk": "^2.4.1",
@@ -179,6 +179,7 @@
     "redux": "4.0.1",
     "redux-form": "8.2.0",
     "redux-immutable": "4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "1.0.2",
     "redux-saga-firebase": "^0.15.0",
     "reselect": "4.0.0",
